<resources>
    <string name="app_name">Quiz App</string>
    <string name="first_quest">1) What creature is depicted in the emblem for Gryffindor house?</string>
    <string name="badger">A badger</string>
    <string name="eagle">An eagle</string>
    <string name="snake">A snake</string>
    <string name="lion">A lion</string>
    <string name="second_quest">2) Among the wizarding community, the term "Muggle" refers to what kind of person?</string>
    <string name="sefian">A non magical person from magical family</string>
    <string name="sesean">A magical person who is really bad at magic</string>
    <string name="sethan">A non magical person from non-magical family</string>
    <string name="sefoan">A magical person with only one magical parent</string>
    <string name="third_quest">3) What is the name of the Hogwarts principal?</string>
    <string name="writean">Write here the answer</string>
    <string name="fourth_quest">4) Members of Ravenclaw house are known for possessing which two of the following traits?</string>
    <string name="wit">Wit</string>
    <string name="loyalty">Loyalty</string>
    <string name="intelligence">Intelligence</string>
    <string name="cunning">Cunning</string>
    <string name="fifth_quest">5) What is the incantation for the Summoning Charm?</string>
    <string name="accio">Accio</string>
    <string name="avis">Avis</string>
    <string name="anapneo">Anapneo</string>
    <string name="aparecium">Aparecium</string>
    <string name="sixth_quest">6) What colour is the Hogwarts Express?</string>
    <string name="emerald">Emerald</string>
    <string name="scarlet">Scarlet</string>
    <string name="green">Green</string>
    <string name="indigo">Indigo</string>
    <string name="seventh_quest">7) How are parcels and letters sent in the wizarding world?</string>
    <string name="eighth_quest">8) What do Harry and Ron crash into when they fly Arthur Weasley\'s Ford Anglia to Hogwarts?</string>
    <string name="whomping">The Whomping Willow</string>
    <string name="express">The Hogwarts Express</string>
    <string name="tower">The Astronomy Tower</string>
    <string name="lake">The Great Lake</string>
    <string name="buttontext">Mischief Managed</string>
    <string name="bad_result">\u0020Probably magic is not for you, and you are what would be called a true Muggle.</string>
    <string name="mid_result">\u0020For me you are a hateful kid who considers himself above the rules.</string>
    <string name="good_result">\u0020The truth is a wonderful and terrible thing, and for this it must be treated with great caution.</string>
    <string name="dumbledore">dumbledore</string>
    <string name="owl">owl</string>
    <string name="result">Your result is\u0020</string>
    <string name="errorQuest1">In question 1 you have to check at least 1 option</string>
    <string name="errorQuest2">In question 2 you have to check at least 1 option</string>
    <string name="errorQuest3">In question 3 you have to write an answer</string>
    <string name="errorQuest4">In question 4 you have to check at least 1 option</string>
    <string name="errorQuest5">In question 5 you have to check at least 1 option</string>
    <string name="errorQuest6">In question 6 you have to check at least 1 option</string>
    <string name="errorQuest7">In question 7 you have to write an answer</string>
    <string name="errorQuest8">In question 8 you have to check at least 1 option</string>
</resources>
